--- a/node162.html
+++ b/node162.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html5411"
   HREF="node163.html">tux</A>
 <B>Sup:</B> <A NAME="tex2html5405"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html5399"
   HREF="node161.html">Práctica: Servicio de Syntax</A>
 <B> Con:</B> 
@@ -197,7 +197,7 @@ Sinatra desde Dentro</A>
 <B> Sig:</B> <A NAME="tex2html5411"
   HREF="node163.html">tux</A>
 <B>Sup:</B> <A NAME="tex2html5405"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html5399"
   HREF="node161.html">Práctica: Servicio de Syntax</A>
 </DIV>
