--- a/node169.html
+++ b/node169.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html5511"
   HREF="node170.html">Openid y Sinatra</A>
 <B>Sup:</B> <A NAME="tex2html5505"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html5499"
   HREF="node168.html">Testing en Sinatra</A>
 <B> Con:</B> 
@@ -215,7 +215,7 @@ alert "hello world!"
 <B> Sig:</B> <A NAME="tex2html5511"
   HREF="node170.html">Openid y Sinatra</A>
 <B>Sup:</B> <A NAME="tex2html5505"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html5499"
   HREF="node168.html">Testing en Sinatra</A>
 </DIV>
