--- a/node182.html
+++ b/node182.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html5734"
   HREF="node183.html">Sinatra::Flash</A>
 <B>Sup:</B> <A NAME="tex2html5728"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html5722"
   HREF="node181.html">Envío de SMSs y</A>
 <B> Con:</B> 
@@ -187,7 +187,7 @@ by Dan Schaefer.  Published March 10, 2014
 <B> Sig:</B> <A NAME="tex2html5734"
   HREF="node183.html">Sinatra::Flash</A>
 <B>Sup:</B> <A NAME="tex2html5728"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html5722"
   HREF="node181.html">Envío de SMSs y</A>
 </DIV>
