--- a/node183.html
+++ b/node183.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html5748"
   HREF="node184.html">Pruebas</A>
 <B>Sup:</B> <A NAME="tex2html5742"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html5736"
   HREF="node182.html">Rest</A>
 <B> Con:</B> 
@@ -280,7 +280,7 @@ gem 'sinatra-flash'
 <B> Sig:</B> <A NAME="tex2html5748"
   HREF="node184.html">Pruebas</A>
 <B>Sup:</B> <A NAME="tex2html5742"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html5736"
   HREF="node182.html">Rest</A>
 </DIV>
