--- a/node184.html
+++ b/node184.html
@@ -92,9 +92,9 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  ALT="crguezl at github"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html5762"
-  HREF="node185.html">HERRAMIENTAS</A>
+  HREF="node185.html">PARTE: HERRAMIENTAS</A>
 <B>Sup:</B> <A NAME="tex2html5756"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html5752"
   HREF="node183.html">Sinatra::Flash</A>
 <B> Con:</B> 
@@ -189,9 +189,9 @@ Andrew Burgess on Aug 22nd 2011 with 22 Comments
  ALT="crguezl at github"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html5762"
-  HREF="node185.html">HERRAMIENTAS</A>
+  HREF="node185.html">PARTE: HERRAMIENTAS</A>
 <B>Sup:</B> <A NAME="tex2html5756"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html5752"
   HREF="node183.html">Sinatra::Flash</A>
 </DIV>
