--- a/node185.html
+++ b/node185.html
@@ -7,8 +7,8 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   Jens Lippmann, Marek Rouchal, Martin Wilck and others -->
 <HTML>
 <HEAD>
-<TITLE>HERRAMIENTAS</TITLE>
-<META NAME="description" CONTENT="HERRAMIENTAS">
+<TITLE>PARTE: HERRAMIENTAS</TITLE>
+<META NAME="description" CONTENT="PARTE: HERRAMIENTAS">
 <META NAME="keywords" CONTENT="javascriptexamples">
 <META NAME="resource-type" CONTENT="document">
 <META NAME="distribution" CONTENT="global">
@@ -111,7 +111,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <!--End of Navigation Panel-->
 
 <H1><A NAME="SECTION07000000000000000000">
-HERRAMIENTAS</A>
+PARTE: HERRAMIENTAS</A>
 </H1>
 
 <P>
