--- a/node186.html
+++ b/node186.html
@@ -95,9 +95,9 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html5820"
   HREF="node187.html">Introducción</A>
 <B>Sup:</B> <A NAME="tex2html5814"
-  HREF="node185.html">HERRAMIENTAS</A>
+  HREF="node185.html">PARTE: HERRAMIENTAS</A>
 <B> Ant:</B> <A NAME="tex2html5808"
-  HREF="node185.html">HERRAMIENTAS</A>
+  HREF="node185.html">PARTE: HERRAMIENTAS</A>
 <B> Con:</B> 
 <A NAME="tex2html5815"
   HREF="node217.html">
@@ -307,9 +307,9 @@ Heroku
 <B> Sig:</B> <A NAME="tex2html5820"
   HREF="node187.html">Introducción</A>
 <B>Sup:</B> <A NAME="tex2html5814"
-  HREF="node185.html">HERRAMIENTAS</A>
+  HREF="node185.html">PARTE: HERRAMIENTAS</A>
 <B> Ant:</B> <A NAME="tex2html5808"
-  HREF="node185.html">HERRAMIENTAS</A>
+  HREF="node185.html">PARTE: HERRAMIENTAS</A>
 </DIV>
 <!--End of Navigation Panel-->
 <ADDRESS>
