--- a/node195.html
+++ b/node195.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html6036"
   HREF="node196.html">Introducción a Los Object</A>
 <B>Sup:</B> <A NAME="tex2html6030"
-  HREF="node185.html">HERRAMIENTAS</A>
+  HREF="node185.html">PARTE: HERRAMIENTAS</A>
 <B> Ant:</B> <A NAME="tex2html6024"
   HREF="node194.html">Véase</A>
 <B> Con:</B> 
@@ -253,7 +253,7 @@ DataMapper
 <B> Sig:</B> <A NAME="tex2html6036"
   HREF="node196.html">Introducción a Los Object</A>
 <B>Sup:</B> <A NAME="tex2html6030"
-  HREF="node185.html">HERRAMIENTAS</A>
+  HREF="node185.html">PARTE: HERRAMIENTAS</A>
 <B> Ant:</B> <A NAME="tex2html6024"
   HREF="node194.html">Véase</A>
 </DIV>
