--- a/node200.html
+++ b/node200.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html6154"
   HREF="node201.html">Google Oauth</A>
 <B>Sup:</B> <A NAME="tex2html6148"
-  HREF="node185.html">HERRAMIENTAS</A>
+  HREF="node185.html">PARTE: HERRAMIENTAS</A>
 <B> Ant:</B> <A NAME="tex2html6142"
   HREF="node199.html">Configurando la Base de</A>
 <B> Con:</B> 
@@ -188,7 +188,7 @@ Slim
 <B> Sig:</B> <A NAME="tex2html6154"
   HREF="node201.html">Google Oauth</A>
 <B>Sup:</B> <A NAME="tex2html6148"
-  HREF="node185.html">HERRAMIENTAS</A>
+  HREF="node185.html">PARTE: HERRAMIENTAS</A>
 <B> Ant:</B> <A NAME="tex2html6142"
   HREF="node199.html">Configurando la Base de</A>
 </DIV>
