--- a/node201.html
+++ b/node201.html
@@ -94,7 +94,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html6166"
   HREF="node202.html">Introduction to OAuth</A>
 <B>Sup:</B> <A NAME="tex2html6160"
-  HREF="node185.html">HERRAMIENTAS</A>
+  HREF="node185.html">PARTE: HERRAMIENTAS</A>
 <B> Ant:</B> <A NAME="tex2html6156"
   HREF="node200.html">Slim</A>
 <B> Con:</B> 
@@ -239,7 +239,7 @@ Google Oauth
 <B> Sig:</B> <A NAME="tex2html6166"
   HREF="node202.html">Introduction to OAuth</A>
 <B>Sup:</B> <A NAME="tex2html6160"
-  HREF="node185.html">HERRAMIENTAS</A>
+  HREF="node185.html">PARTE: HERRAMIENTAS</A>
 <B> Ant:</B> <A NAME="tex2html6156"
   HREF="node200.html">Slim</A>
 </DIV>
