--- a/node21.html
+++ b/node21.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html2228"
   HREF="node22.html">Introducción</A>
 <B>Sup:</B> <A NAME="tex2html2222"
-  HREF="node6.html">PRIMERA PARTE: APUNTES DE</A>
+  HREF="node6.html">PARTE: APUNTES DE PROCESADORES</A>
 <B> Ant:</B> <A NAME="tex2html2216"
   HREF="node20.html">Expresiones Regulares en Flex</A>
 <B> Con:</B> 
@@ -739,7 +739,7 @@ con nombre</A>
 <B> Sig:</B> <A NAME="tex2html2228"
   HREF="node22.html">Introducción</A>
 <B>Sup:</B> <A NAME="tex2html2222"
-  HREF="node6.html">PRIMERA PARTE: APUNTES DE</A>
+  HREF="node6.html">PARTE: APUNTES DE PROCESADORES</A>
 <B> Ant:</B> <A NAME="tex2html2216"
   HREF="node20.html">Expresiones Regulares en Flex</A>
 </DIV>
