--- a/node6.html
+++ b/node6.html
@@ -7,8 +7,8 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   Jens Lippmann, Marek Rouchal, Martin Wilck and others -->
 <HTML>
 <HEAD>
-<TITLE>PRIMERA PARTE: APUNTES DE PROCESADORES DE LENGUAJES</TITLE>
-<META NAME="description" CONTENT="PRIMERA PARTE: APUNTES DE PROCESADORES DE LENGUAJES">
+<TITLE>PARTE: APUNTES DE PROCESADORES DE LENGUAJES</TITLE>
+<META NAME="description" CONTENT="PARTE: APUNTES DE PROCESADORES DE LENGUAJES">
 <META NAME="keywords" CONTENT="javascriptexamples">
 <META NAME="resource-type" CONTENT="document">
 <META NAME="distribution" CONTENT="global">
@@ -111,7 +111,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <!--End of Navigation Panel-->
 
 <H1><A NAME="SECTION04000000000000000000">
-PRIMERA PARTE: APUNTES DE PROCESADORES DE LENGUAJES</A>
+PARTE: APUNTES DE PROCESADORES DE LENGUAJES</A>
 </H1>
 
 <P>
