--- a/node79.html
+++ b/node79.html
@@ -94,7 +94,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html3723"
   HREF="node80.html">La Calculadora</A>
 <B>Sup:</B> <A NAME="tex2html3717"
-  HREF="node6.html">PRIMERA PARTE: APUNTES DE</A>
+  HREF="node6.html">PARTE: APUNTES DE PROCESADORES</A>
 <B> Ant:</B> <A NAME="tex2html3713"
   HREF="node78.html">Consejos a seguir al</A>
 <B> Con:</B> 
@@ -215,7 +215,7 @@ Análisis Sintáctico Ascendente en Ruby</A>
 <B> Sig:</B> <A NAME="tex2html3723"
   HREF="node80.html">La Calculadora</A>
 <B>Sup:</B> <A NAME="tex2html3717"
-  HREF="node6.html">PRIMERA PARTE: APUNTES DE</A>
+  HREF="node6.html">PARTE: APUNTES DE PROCESADORES</A>
 <B> Ant:</B> <A NAME="tex2html3713"
   HREF="node78.html">Consejos a seguir al</A>
 </DIV>
