--- a/node95.html
+++ b/node95.html
@@ -95,9 +95,9 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html4131"
   HREF="node96.html">Introducción</A>
 <B>Sup:</B> <A NAME="tex2html4125"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html4119"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Con:</B> 
 <A NAME="tex2html4126"
   HREF="node217.html">
@@ -481,9 +481,9 @@ Rack, un Webserver Ruby Modular</A>
 <B> Sig:</B> <A NAME="tex2html4131"
   HREF="node96.html">Introducción</A>
 <B>Sup:</B> <A NAME="tex2html4125"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html4119"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 </DIV>
 <!--End of Navigation Panel-->
 <ADDRESS>
