--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 </UL>
 <BR>
 <LI><A NAME="tex2html849"
-  HREF="node6.html">PRIMERA PARTE: APUNTES DE PROCESADORES DE LENGUAJES</A>
+  HREF="node6.html">PARTE: APUNTES DE PROCESADORES DE LENGUAJES</A>
 <UL>
 <LI><A NAME="tex2html850"
   HREF="node7.html">Expresiones Regulares y Análisis Léxico en JavaScript</A>
@@ -600,7 +600,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 </UL>
 <BR>
 <LI><A NAME="tex2html1051"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <UL>
 <LI><A NAME="tex2html1052"
   HREF="node95.html">Rack, un Webserver Ruby Modular</A>
@@ -879,7 +879,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 </UL>
 <BR>
 <LI><A NAME="tex2html1170"
-  HREF="node185.html">HERRAMIENTAS</A>
+  HREF="node185.html">PARTE: HERRAMIENTAS</A>
 <UL>
 <LI><A NAME="tex2html1171"
   HREF="node186.html">Heroku</A>
