--- a/node1.html
+++ b/node1.html
@@ -122,7 +122,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><A NAME="tex2html1229"
   HREF="node3.html">&#205;ndice de Tablas</A>
 <LI><A NAME="tex2html1230"
-  HREF="node6.html">PRIMERA PARTE: APUNTES DE PROCESADORES DE LENGUAJES</A>
+  HREF="node6.html">PARTE: APUNTES DE PROCESADORES DE LENGUAJES</A>
 <UL>
 <LI><A NAME="tex2html1231"
   HREF="node7.html">Expresiones Regulares y Análisis Léxico en JavaScript</A>
@@ -592,7 +592,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 </UL>
 <BR>
 <LI><A NAME="tex2html1432"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <UL>
 <LI><A NAME="tex2html1433"
   HREF="node95.html">Rack, un Webserver Ruby Modular</A>
@@ -871,7 +871,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 </UL>
 <BR>
 <LI><A NAME="tex2html1551"
-  HREF="node185.html">HERRAMIENTAS</A>
+  HREF="node185.html">PARTE: HERRAMIENTAS</A>
 <UL>
 <LI><A NAME="tex2html1552"
   HREF="node186.html">Heroku</A>
