--- a/node129.html
+++ b/node129.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html4812"
   HREF="node130.html">Introducción</A>
 <B>Sup:</B> <A NAME="tex2html4806"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html4800"
   HREF="node128.html">Véase También</A>
 <B> Con:</B> 
@@ -196,7 +196,7 @@ Primeros Pasos</A>
 <B> Sig:</B> <A NAME="tex2html4812"
   HREF="node130.html">Introducción</A>
 <B>Sup:</B> <A NAME="tex2html4806"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html4800"
   HREF="node128.html">Véase También</A>
 </DIV>
