--- a/node131.html
+++ b/node131.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html4843"
   HREF="node132.html">Ejemplo Simple de uso</A>
 <B>Sup:</B> <A NAME="tex2html4837"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html4831"
   HREF="node130.html">Introducción</A>
 <B> Con:</B> 
@@ -393,7 +393,7 @@ Fundamentos</A>
 <B> Sig:</B> <A NAME="tex2html4843"
   HREF="node132.html">Ejemplo Simple de uso</A>
 <B>Sup:</B> <A NAME="tex2html4837"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html4831"
   HREF="node130.html">Introducción</A>
 </DIV>
