--- a/node167.html
+++ b/node167.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html5483"
   HREF="node168.html">Testing en Sinatra</A>
 <B>Sup:</B> <A NAME="tex2html5477"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html5471"
   HREF="node166.html">Petición y Respuesta</A>
 <B> Con:</B> 
@@ -208,7 +208,7 @@ Podemos combinar una aplicación clásica  con una modular, pero sólo puede hab
 <B> Sig:</B> <A NAME="tex2html5483"
   HREF="node168.html">Testing en Sinatra</A>
 <B>Sup:</B> <A NAME="tex2html5477"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html5471"
   HREF="node166.html">Petición y Respuesta</A>
 </DIV>
