--- a/node168.html
+++ b/node168.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html5497"
   HREF="node169.html">CoffeeScript y Sinatra</A>
 <B>Sup:</B> <A NAME="tex2html5491"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html5485"
   HREF="node167.html">Aplicaciones Modulares</A>
 <B> Con:</B> 
@@ -232,7 +232,7 @@ Firstly the <code>spec_helper</code> file is required, we then create a describe
 <B> Sig:</B> <A NAME="tex2html5497"
   HREF="node169.html">CoffeeScript y Sinatra</A>
 <B>Sup:</B> <A NAME="tex2html5491"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html5485"
   HREF="node167.html">Aplicaciones Modulares</A>
 </DIV>
