--- a/node170.html
+++ b/node170.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html5525"
   HREF="node171.html">Referencias. Véase Tambien</A>
 <B>Sup:</B> <A NAME="tex2html5519"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html5513"
   HREF="node169.html">CoffeeScript y Sinatra</A>
 <B> Con:</B> 
@@ -217,7 +217,7 @@ methods it would like to offer its user base.
 <B> Sig:</B> <A NAME="tex2html5525"
   HREF="node171.html">Referencias. Véase Tambien</A>
 <B>Sup:</B> <A NAME="tex2html5519"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html5513"
   HREF="node169.html">CoffeeScript y Sinatra</A>
 </DIV>
