--- a/node172.html
+++ b/node172.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html5552"
   HREF="node173.html">Introducción a Los Object</A>
 <B>Sup:</B> <A NAME="tex2html5546"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html5540"
   HREF="node171.html">Referencias. Véase Tambien</A>
 <B> Con:</B> 
@@ -246,7 +246,7 @@ DataMapper y Sinatra
 <B> Sig:</B> <A NAME="tex2html5552"
   HREF="node173.html">Introducción a Los Object</A>
 <B>Sup:</B> <A NAME="tex2html5546"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html5540"
   HREF="node171.html">Referencias. Véase Tambien</A>
 </DIV>
