--- a/node177.html
+++ b/node177.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html5666"
   HREF="node178.html">Ejemplo Simple</A>
 <B>Sup:</B> <A NAME="tex2html5660"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html5654"
   HREF="node176.html">Configurando la Base de</A>
 <B> Con:</B> 
@@ -191,7 +191,7 @@ Google Plus y Sinatra</A>
 <B> Sig:</B> <A NAME="tex2html5666"
   HREF="node178.html">Ejemplo Simple</A>
 <B>Sup:</B> <A NAME="tex2html5660"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html5654"
   HREF="node176.html">Configurando la Base de</A>
 </DIV>
