--- a/node179.html
+++ b/node179.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html5693"
   HREF="node180.html">Depurando una Ejecución con</A>
 <B>Sup:</B> <A NAME="tex2html5687"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html5681"
   HREF="node178.html">Ejemplo Simple</A>
 <B> Con:</B> 
@@ -193,7 +193,7 @@ Depuración en Sinatra</A>
 <B> Sig:</B> <A NAME="tex2html5693"
   HREF="node180.html">Depurando una Ejecución con</A>
 <B>Sup:</B> <A NAME="tex2html5687"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html5681"
   HREF="node178.html">Ejemplo Simple</A>
 </DIV>
