--- a/node18.html
+++ b/node18.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html2116"
   HREF="node19.html">Expresiones Regulares Posix en</A>
 <B>Sup:</B> <A NAME="tex2html2110"
-  HREF="node6.html">PRIMERA PARTE: APUNTES DE</A>
+  HREF="node6.html">PARTE: APUNTES DE PROCESADORES</A>
 <B> Ant:</B> <A NAME="tex2html2104"
   HREF="node17.html">Práctica: Analizador Léxico para</A>
 <B> Con:</B> 
@@ -273,7 +273,7 @@ Expresiones Regulares en C</A>
 <B> Sig:</B> <A NAME="tex2html2116"
   HREF="node19.html">Expresiones Regulares Posix en</A>
 <B>Sup:</B> <A NAME="tex2html2110"
-  HREF="node6.html">PRIMERA PARTE: APUNTES DE</A>
+  HREF="node6.html">PARTE: APUNTES DE PROCESADORES</A>
 <B> Ant:</B> <A NAME="tex2html2104"
   HREF="node17.html">Práctica: Analizador Léxico para</A>
 </DIV>
