--- a/node181.html
+++ b/node181.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html5720"
   HREF="node182.html">Rest</A>
 <B>Sup:</B> <A NAME="tex2html5714"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html5708"
   HREF="node180.html">Depurando una Ejecución con</A>
 <B> Con:</B> 
@@ -238,7 +238,7 @@ end
 <B> Sig:</B> <A NAME="tex2html5720"
   HREF="node182.html">Rest</A>
 <B>Sup:</B> <A NAME="tex2html5714"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B> Ant:</B> <A NAME="tex2html5708"
   HREF="node180.html">Depurando una Ejecución con</A>
 </DIV>
