--- a/node217.html
+++ b/node217.html
@@ -115,7 +115,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><A NAME="tex2html6424"
   HREF="node3.html">&#205;ndice de Tablas</A>
 <LI><A NAME="tex2html6425"
-  HREF="node6.html">PRIMERA PARTE: APUNTES DE PROCESADORES DE LENGUAJES</A>
+  HREF="node6.html">PARTE: APUNTES DE PROCESADORES DE LENGUAJES</A>
 <UL>
 <LI><A NAME="tex2html6426"
   HREF="node7.html">Expresiones Regulares y Análisis Léxico en JavaScript</A>
@@ -585,7 +585,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 </UL>
 <BR>
 <LI><A NAME="tex2html6627"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <UL>
 <LI><A NAME="tex2html6628"
   HREF="node95.html">Rack, un Webserver Ruby Modular</A>
@@ -864,7 +864,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 </UL>
 <BR>
 <LI><A NAME="tex2html6746"
-  HREF="node185.html">HERRAMIENTAS</A>
+  HREF="node185.html">PARTE: HERRAMIENTAS</A>
 <UL>
 <LI><A NAME="tex2html6747"
   HREF="node186.html">Heroku</A>
