--- a/node33.html
+++ b/node33.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html2849"
   HREF="node34.html">Conceptos Básicos para el</A>
 <B>Sup:</B> <A NAME="tex2html2843"
-  HREF="node6.html">PRIMERA PARTE: APUNTES DE</A>
+  HREF="node6.html">PARTE: APUNTES DE PROCESADORES</A>
 <B> Ant:</B> <A NAME="tex2html2837"
   HREF="node32.html">Análisis Sintáctico con Regexp::Grammars</A>
 <B> Con:</B> 
@@ -236,7 +236,7 @@ Analizadores Descendentes Predictivos en JavaScript</A>
 <B> Sig:</B> <A NAME="tex2html2849"
   HREF="node34.html">Conceptos Básicos para el</A>
 <B>Sup:</B> <A NAME="tex2html2843"
-  HREF="node6.html">PRIMERA PARTE: APUNTES DE</A>
+  HREF="node6.html">PARTE: APUNTES DE PROCESADORES</A>
 <B> Ant:</B> <A NAME="tex2html2837"
   HREF="node32.html">Análisis Sintáctico con Regexp::Grammars</A>
 </DIV>
