--- a/node40.html
+++ b/node40.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html2975"
   HREF="node41.html">Ejemplo Simple de Intérprete:</A>
 <B>Sup:</B> <A NAME="tex2html2969"
-  HREF="node6.html">PRIMERA PARTE: APUNTES DE</A>
+  HREF="node6.html">PARTE: APUNTES DE PROCESADORES</A>
 <B> Ant:</B> <A NAME="tex2html2963"
   HREF="node39.html">Práctica: Analizador Descendente Predictivo</A>
 <B> Con:</B> 
@@ -198,7 +198,7 @@ Análisis Sintáctico Mediante Precedencia de Operadores en JavaScript</A>
 <B> Sig:</B> <A NAME="tex2html2975"
   HREF="node41.html">Ejemplo Simple de Intérprete:</A>
 <B>Sup:</B> <A NAME="tex2html2969"
-  HREF="node6.html">PRIMERA PARTE: APUNTES DE</A>
+  HREF="node6.html">PARTE: APUNTES DE PROCESADORES</A>
 <B> Ant:</B> <A NAME="tex2html2963"
   HREF="node39.html">Práctica: Analizador Descendente Predictivo</A>
 </DIV>
