--- a/node43.html
+++ b/node43.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html3019"
   HREF="node44.html">Introducción a los PEGs</A>
 <B>Sup:</B> <A NAME="tex2html3013"
-  HREF="node6.html">PRIMERA PARTE: APUNTES DE</A>
+  HREF="node6.html">PARTE: APUNTES DE PROCESADORES</A>
 <B> Ant:</B> <A NAME="tex2html3007"
   HREF="node42.html">Análisis Top Down Usando</A>
 <B> Con:</B> 
@@ -352,7 +352,7 @@ Análisis Descendente mediante Parsing Expresion Grammars en JavaScript</A>
 <B> Sig:</B> <A NAME="tex2html3019"
   HREF="node44.html">Introducción a los PEGs</A>
 <B>Sup:</B> <A NAME="tex2html3013"
-  HREF="node6.html">PRIMERA PARTE: APUNTES DE</A>
+  HREF="node6.html">PARTE: APUNTES DE PROCESADORES</A>
 <B> Ant:</B> <A NAME="tex2html3007"
   HREF="node42.html">Análisis Top Down Usando</A>
 </DIV>
