--- a/node5.html
+++ b/node5.html
@@ -92,7 +92,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  ALT="crguezl at github"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html1649"
-  HREF="node6.html">PRIMERA PARTE: APUNTES DE</A>
+  HREF="node6.html">PARTE: APUNTES DE PROCESADORES</A>
 <B>Sup:</B> <A NAME="tex2html1643"
   HREF="node3.html">&#205;ndice de Tablas</A>
 <B> Ant:</B> <A NAME="tex2html1639"
@@ -190,7 +190,7 @@ de la Escuela Superior de Informática en la Universidad de La Laguna
  ALT="crguezl at github"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html1649"
-  HREF="node6.html">PRIMERA PARTE: APUNTES DE</A>
+  HREF="node6.html">PARTE: APUNTES DE PROCESADORES</A>
 <B>Sup:</B> <A NAME="tex2html1643"
   HREF="node3.html">&#205;ndice de Tablas</A>
 <B> Ant:</B> <A NAME="tex2html1639"
