--- a/node59.html
+++ b/node59.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html3358"
   HREF="node60.html">Conceptos Básicos para el</A>
 <B>Sup:</B> <A NAME="tex2html3352"
-  HREF="node6.html">PRIMERA PARTE: APUNTES DE</A>
+  HREF="node6.html">PARTE: APUNTES DE PROCESADORES</A>
 <B> Ant:</B> <A NAME="tex2html3346"
   HREF="node58.html">Práctica: Inventando un Lenguaje:</A>
 <B> Con:</B> 
@@ -315,7 +315,7 @@ Análisis Sintáctico Ascendente en JavaScript</A>
 <B> Sig:</B> <A NAME="tex2html3358"
   HREF="node60.html">Conceptos Básicos para el</A>
 <B>Sup:</B> <A NAME="tex2html3352"
-  HREF="node6.html">PRIMERA PARTE: APUNTES DE</A>
+  HREF="node6.html">PARTE: APUNTES DE PROCESADORES</A>
 <B> Ant:</B> <A NAME="tex2html3346"
   HREF="node58.html">Práctica: Inventando un Lenguaje:</A>
 </DIV>
