--- a/node7.html
+++ b/node7.html
@@ -95,9 +95,9 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html1864"
   HREF="node8.html">Mozilla Developer Network: Documentación</A>
 <B>Sup:</B> <A NAME="tex2html1858"
-  HREF="node6.html">PRIMERA PARTE: APUNTES DE</A>
+  HREF="node6.html">PARTE: APUNTES DE PROCESADORES</A>
 <B> Ant:</B> <A NAME="tex2html1852"
-  HREF="node6.html">PRIMERA PARTE: APUNTES DE</A>
+  HREF="node6.html">PARTE: APUNTES DE PROCESADORES</A>
 <B> Con:</B> 
 <A NAME="tex2html1859"
   HREF="node217.html">
@@ -319,9 +319,9 @@ Expresiones Regulares y Análisis Léxico en JavaScript
 <B> Sig:</B> <A NAME="tex2html1864"
   HREF="node8.html">Mozilla Developer Network: Documentación</A>
 <B>Sup:</B> <A NAME="tex2html1858"
-  HREF="node6.html">PRIMERA PARTE: APUNTES DE</A>
+  HREF="node6.html">PARTE: APUNTES DE PROCESADORES</A>
 <B> Ant:</B> <A NAME="tex2html1852"
-  HREF="node6.html">PRIMERA PARTE: APUNTES DE</A>
+  HREF="node6.html">PARTE: APUNTES DE PROCESADORES</A>
 </DIV>
 <!--End of Navigation Panel-->
 <ADDRESS>
