--- a/node93.html
+++ b/node93.html
@@ -92,7 +92,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  ALT="crguezl at github"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html3985"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B>Sup:</B> <A NAME="tex2html3979"
   HREF="node82.html">PARTE: CREATE YOUR OWN</A>
 <B> Ant:</B> <A NAME="tex2html3975"
@@ -182,7 +182,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  ALT="crguezl at github"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html3985"
-  HREF="node94.html">SINATRA</A>
+  HREF="node94.html">PARTE: SINATRA</A>
 <B>Sup:</B> <A NAME="tex2html3979"
   HREF="node82.html">PARTE: CREATE YOUR OWN</A>
 <B> Ant:</B> <A NAME="tex2html3975"
