--- a/node94.html
+++ b/node94.html
@@ -7,8 +7,8 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   Jens Lippmann, Marek Rouchal, Martin Wilck and others -->
 <HTML>
 <HEAD>
-<TITLE>SINATRA</TITLE>
-<META NAME="description" CONTENT="SINATRA">
+<TITLE>PARTE: SINATRA</TITLE>
+<META NAME="description" CONTENT="PARTE: SINATRA">
 <META NAME="keywords" CONTENT="javascriptexamples">
 <META NAME="resource-type" CONTENT="document">
 <META NAME="distribution" CONTENT="global">
@@ -111,7 +111,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <!--End of Navigation Panel-->
 
 <H1><A NAME="SECTION06000000000000000000">
-SINATRA</A>
+PARTE: SINATRA</A>
 </H1>
 <BR> <HR>
 <!--Table of Child-Links-->
