--- a/node199.html
+++ b/node199.html
@@ -131,44 +131,40 @@ Google Oauth
 <LI><A NAME="tex2html6136"
   HREF="node202.html">Using OAuth 2.0 to Access Google APIs</A>
 <LI><A NAME="tex2html6137"
-  HREF="node203.html">Sign-in with Google</A>
-<LI><A NAME="tex2html6138"
-  HREF="node204.html">OmniAuth gem: Standardized Multi-Provider Authentication for Ruby</A>
+  HREF="node203.html">OmniAuth gem: Standardized Multi-Provider Authentication for Ruby</A>
 <UL>
+<LI><A NAME="tex2html6138"
+  HREF="node203.html#SECTION07440010000000000000">Getting Started</A>
 <LI><A NAME="tex2html6139"
-  HREF="node204.html#SECTION07450010000000000000">Getting Started</A>
-</UL>
-<BR>
+  HREF="node203.html#SECTION07441000000000000000">Auth Hash Schema</A>
 <LI><A NAME="tex2html6140"
-  HREF="node205.html">OmniAuth OAuth2 gem</A>
+  HREF="node203.html#SECTION07442000000000000000">Class: OmniAuth::AuthHash::InfoHash</A>
 <UL>
 <LI><A NAME="tex2html6141"
-  HREF="node205.html#SECTION07461000000000000000">Google + API for Ruby</A>
-<UL>
-<LI><A NAME="tex2html6142"
-  HREF="node205.html#SECTION07461010000000000000">Donde</A>
-<LI><A NAME="tex2html6143"
-  HREF="node205.html#SECTION07461020000000000000">Step 1: Enable the Google+ API</A>
+  HREF="node203.html#SECTION07442010000000000000">Schema (1.0 and Later)</A>
 </UL>
 </UL>
 <BR>
+<LI><A NAME="tex2html6142"
+  HREF="node204.html">OmniAuth OAuth2 gem</A>
+<LI><A NAME="tex2html6143"
+  HREF="node205.html">Sign-in with Google +</A>
 <LI><A NAME="tex2html6144"
-  HREF="node206.html">Google+ Sign-In for server-side apps</A>
-<LI><A NAME="tex2html6145"
-  HREF="node207.html">Authentication using the Google APIs Client Library for JavaScript</A>
+  HREF="node206.html">Google + API for Ruby</A>
 <UL>
+<LI><A NAME="tex2html6145"
+  HREF="node206.html#SECTION07470010000000000000">Donde</A>
 <LI><A NAME="tex2html6146"
-  HREF="node207.html#SECTION07481000000000000000">Getting access keys for your application</A>
+  HREF="node206.html#SECTION07470020000000000000">Step 1: Enable the Google+ API</A>
 </UL>
 <BR>
 <LI><A NAME="tex2html6147"
-  HREF="node208.html">Auth Hash Schema</A>
+  HREF="node207.html">Google+ Sign-In for server-side apps</A>
 <LI><A NAME="tex2html6148"
-  HREF="node209.html">Class: OmniAuth::AuthHash::InfoHash</A>
-<UL>
+  HREF="node208.html">Authentication using the Google APIs Client Library for JavaScript</A>
 <LI><A NAME="tex2html6149"
-  HREF="node209.html#SECTION074100010000000000000">Schema (1.0 and Later)</A>
-</UL></UL>
+  HREF="node209.html">Getting access keys for your application</A>
+</UL>
 <!--End of Table of Child-Links-->
 
 <DIV CLASS="navigation"><HR>
