--- a/node202.html
+++ b/node202.html
@@ -93,7 +93,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  ALT="crguezl at github"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html6192"
-  HREF="node203.html">Sign-in with Google</A>
+  HREF="node203.html">OmniAuth gem: Standardized Multi-Provider</A>
 <B>Sup:</B> <A NAME="tex2html6186"
   HREF="node199.html">Google Oauth</A>
 <B> Ant:</B> <A NAME="tex2html6180"
@@ -224,7 +224,7 @@ that you want to access.
  ALT="crguezl at github"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html6192"
-  HREF="node203.html">Sign-in with Google</A>
+  HREF="node203.html">OmniAuth gem: Standardized Multi-Provider</A>
 <B>Sup:</B> <A NAME="tex2html6186"
   HREF="node199.html">Google Oauth</A>
 <B> Ant:</B> <A NAME="tex2html6180"
