--- a/node205.html
+++ b/node205.html
@@ -7,8 +7,8 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   Jens Lippmann, Marek Rouchal, Martin Wilck and others -->
 <HTML>
 <HEAD>
-<TITLE>OmniAuth OAuth2 gem</TITLE>
-<META NAME="description" CONTENT="OmniAuth OAuth2 gem">
+<TITLE>Sign-in with Google +</TITLE>
+<META NAME="description" CONTENT="Sign-in with Google +">
 <META NAME="keywords" CONTENT="javascriptexamples">
 <META NAME="resource-type" CONTENT="document">
 <META NAME="distribution" CONTENT="global">
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html6234"
+<A NAME="tex2html6237"
   HREF="node206.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html6228"
+<A NAME="tex2html6231"
   HREF="node199.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html6222"
+<A NAME="tex2html6225"
   HREF="node204.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html6230"
+<A NAME="tex2html6233"
   HREF="node215.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html6232"
+<A NAME="tex2html6235"
   HREF="node218.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -92,184 +92,61 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html6235"
-  HREF="node206.html">Google+ Sign-In for server-side</A>
-<B>Sup:</B> <A NAME="tex2html6229"
+<B> Sig:</B> <A NAME="tex2html6238"
+  HREF="node206.html">Google + API for</A>
+<B>Sup:</B> <A NAME="tex2html6232"
   HREF="node199.html">Google Oauth</A>
-<B> Ant:</B> <A NAME="tex2html6223"
-  HREF="node204.html">OmniAuth gem: Standardized Multi-Provider</A>
+<B> Ant:</B> <A NAME="tex2html6226"
+  HREF="node204.html">OmniAuth OAuth2 gem</A>
 <B> Con:</B> 
-<A NAME="tex2html6230"
+<A NAME="tex2html6233"
   HREF="node215.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html6232"
+<A NAME="tex2html6235"
   HREF="node218.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
 </DIV>
 <!--End of Navigation Panel-->
-<!--Table of Child-Links-->
-<A NAME="CHILD_LINKS"><STRONG>Subsecciones</STRONG></A>
-
-<UL CLASS="ChildLinks">
-<LI><A NAME="tex2html6236"
-  HREF="node205.html#SECTION07461000000000000000">Google + API for Ruby</A>
-<UL>
-<LI><A NAME="tex2html6237"
-  HREF="node205.html#SECTION07461010000000000000">Donde</A>
-<LI><A NAME="tex2html6238"
-  HREF="node205.html#SECTION07461020000000000000">Step 1: Enable the Google+ API</A>
-</UL></UL>
-<!--End of Table of Child-Links-->
-<HR>
 
 <H1><A NAME="SECTION07460000000000000000">
-OmniAuth OAuth2 gem</A>
-</H1>
-
-<P>
-
-<UL>
-<LI><A NAME="tex2html806"
-  HREF="https://github.com/intridea/omniauth-oauth2">omniauth-oauth2</A>
-</LI>
-</UL>
-
-<P>
-This gem contains a generic OAuth2 strategy for OmniAuth. It is meant to
-serve as a building block strategy for other strategies and not to be used
-independently (since it has no inherent way to gather uid and user info).
-
-<P>
-
-<H2><A NAME="SECTION07461000000000000000">
-Google + API for Ruby</A>
-</H2>
-
-<P>
-
-<H4><A NAME="SECTION07461010000000000000">
-Donde</A>
-</H4>
-  
-
-<P>
+Sign-in with Google +</A>
+</H1> 
+Google+ Sign-in provides the  <A NAME="tex2html808"
+  HREF="http://oauth.net/">OAuth</A>
+ 2.0 authentication mechanism along
+with additional access to Google desktop and mobile features.
 
 <UL>
-<LI><A NAME="tex2html807"
-  HREF="https://github.com/crguezl/gplus-quickstart-ruby">https://github.com/crguezl/gplus-quickstart-ruby</A>
-</LI>
-<LI><PRE>
-[~/sinatra/gplus-quickstart-ruby(master)]$ pwd -P
-/Users/casiano/local/src/ruby/sinatra/gplus-quickstart-ruby
-[~/sinatra/gplus-quickstart-ruby(master)]$ git remote -v
-googleplus      git@github.com:googleplus/gplus-quickstart-ruby.git (fetch)
-googleplus      git@github.com:googleplus/gplus-quickstart-ruby.git (push)
-origin  git@github.com:crguezl/gplus-quickstart-ruby.git (fetch)
-origin  git@github.com:crguezl/gplus-quickstart-ruby.git (push)
-</PRE>
-</LI>
-<LI><A NAME="tex2html808"
-  HREF="https://github.com/crguezl/gplus-quickstart-ruby">https://github.com/crguezl/gplus-quickstart-ruby</A>
-</LI>
 <LI><A NAME="tex2html809"
-  HREF="https://developers.google.com/+/quickstart/ruby">https://developers.google.com/+/quickstart/ruby</A>
-</LI>
-</UL>
-
-<P>
-The app demonstrates:
-
-<P>
-
-<UL>
-<LI>Using the Google+ Sign-In button to get an  <A NAME="tex2html810"
+  HREF="https://developers.google.com/+/">https://developers.google.com/+/</A>
+provides the  <A NAME="tex2html810"
   HREF="http://oauth.net/">OAuth</A>
- 2.0 refresh token.
+ 2.0 authentication mechanism along with additional access to Google desktop and mobile features.
 </LI>
-<LI>Exchanging the refresh token for an access token.
-</LI>
-<LI>Making Google+ API requests with the access token, including getting a list of people that the user has circled.
-</LI>
-<LI>Disconnecting the app from the user's Google account and revoking tokens.
+<LI>Direct access to an authentication service based on the standardized OpenID Connect mechanism is also available.
+<A NAME="tex2html811"
+  HREF="https://developers.google.com/accounts/docs/OAuth2Login">https://developers.google.com/accounts/docs/OAuth2Login</A>
 </LI>
 </UL>
 
 <P>
-
-<H4><A NAME="SECTION07461020000000000000">
-Step 1: Enable the Google+ API</A>
-</H4>
-  
-
-<P>
-Create a Google APIs Console project,  <A NAME="tex2html811"
-  HREF="http://oauth.net/">OAuth</A>
- 2.0 client ID, and register your JavaScript origins:
-
-<P>
-To register a new application, do the following:
-
-<P>
-
-<UL>
-<LI>Go to the Google Cloud Console.
-</LI>
-<LI>Select a project, or create a new one.
-</LI>
-<LI>In the sidebar on the left, select <code>APIs &amp; auth</code>. 
-In the displayed list of APIs, make sure the <code>Google+ API</code> status is set to <code>ON</code>.
-</LI>
-<LI>In the sidebar on the left, select <code>Registered apps</code>.
-</LI>
-<LI>At the top of the page, select Register App.
-</LI>
-<LI>Fill out the form and select Register.
-</LI>
-</UL>
-
-<FONT COLOR="#ff0000"> Register the origins where your app is allowed to access the Google APIs</FONT>. 
-The origin is the unique combination of protocol, hostname, and
-port. You can enter multiple origins to allow for your app to run on
-different protocols, domains or subdomains. Wildcards are not allowed.
-
-<P>
-
-<UL>
-<LI>Expand the  <A NAME="tex2html812"
-  HREF="http://oauth.net/">OAuth</A>
- 2.0 Client ID section.
-</LI>
-<LI>In the Web origin field, enter your origin:
-<PRE>
-http://localhost:4567
-</PRE>
-</LI>
-<LI>Press ENTER to save your origin. You can then click the + symbol to add additional origins.
-</LI>
-<LI>Note or copy the client ID and client secret that your app will need to use to access the APIs.
-</LI>
-</UL>
-
-<P>
-<A NAME="tex2html813"
-  HREF="https://developers.google.com/api-client-library/ruby/guide/aaa_client_secrets">Client Secrets</A>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html6234"
+<A NAME="tex2html6237"
   HREF="node206.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html6228"
+<A NAME="tex2html6231"
   HREF="node199.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html6222"
+<A NAME="tex2html6225"
   HREF="node204.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html6230"
+<A NAME="tex2html6233"
   HREF="node215.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html6232"
+<A NAME="tex2html6235"
   HREF="node218.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -321,12 +198,12 @@ http://localhost:4567
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html6235"
-  HREF="node206.html">Google+ Sign-In for server-side</A>
-<B>Sup:</B> <A NAME="tex2html6229"
+<B> Sig:</B> <A NAME="tex2html6238"
+  HREF="node206.html">Google + API for</A>
+<B>Sup:</B> <A NAME="tex2html6232"
   HREF="node199.html">Google Oauth</A>
-<B> Ant:</B> <A NAME="tex2html6223"
-  HREF="node204.html">OmniAuth gem: Standardized Multi-Provider</A>
+<B> Ant:</B> <A NAME="tex2html6226"
+  HREF="node204.html">OmniAuth OAuth2 gem</A>
 </DIV>
 <!--End of Navigation Panel-->
 <ADDRESS>
