--- a/node210.html
+++ b/node210.html
@@ -97,7 +97,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B>Sup:</B> <A NAME="tex2html6302"
   HREF="javascriptexamples.html">Apuntes de la Asignatura</A>
 <B> Ant:</B> <A NAME="tex2html6296"
-  HREF="node209.html">Class: OmniAuth::AuthHash::InfoHash</A>
+  HREF="node209.html">Getting access keys for</A>
 <B> Con:</B> 
 <A NAME="tex2html6303"
   HREF="node215.html">
@@ -210,7 +210,7 @@ PARTE: BITÁCORA DEL CURSO</A>
 <B>Sup:</B> <A NAME="tex2html6302"
   HREF="javascriptexamples.html">Apuntes de la Asignatura</A>
 <B> Ant:</B> <A NAME="tex2html6296"
-  HREF="node209.html">Class: OmniAuth::AuthHash::InfoHash</A>
+  HREF="node209.html">Getting access keys for</A>
 </DIV>
 <!--End of Navigation Panel-->
 <ADDRESS>
