--- a/index.html
+++ b/index.html
@@ -925,27 +925,25 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><A NAME="tex2html1188"
   HREF="node202.html">Using OAuth 2.0 to Access Google APIs</A>
 <LI><A NAME="tex2html1189"
-  HREF="node203.html">Sign-in with Google</A>
+  HREF="node203.html">OmniAuth gem: Standardized Multi-Provider Authentication for Ruby</A>
+<UL>
 <LI><A NAME="tex2html1190"
-  HREF="node204.html">OmniAuth gem: Standardized Multi-Provider Authentication for Ruby</A>
+  HREF="node203.html#SECTION07441000000000000000">Auth Hash Schema</A>
 <LI><A NAME="tex2html1191"
-  HREF="node205.html">OmniAuth OAuth2 gem</A>
-<UL>
+  HREF="node203.html#SECTION07442000000000000000">Class: OmniAuth::AuthHash::InfoHash</A>
+</UL>
 <LI><A NAME="tex2html1192"
-  HREF="node205.html#SECTION07461000000000000000">Google + API for Ruby</A>
-</UL>
+  HREF="node204.html">OmniAuth OAuth2 gem</A>
 <LI><A NAME="tex2html1193"
-  HREF="node206.html">Google+ Sign-In for server-side apps</A>
+  HREF="node205.html">Sign-in with Google +</A>
 <LI><A NAME="tex2html1194"
-  HREF="node207.html">Authentication using the Google APIs Client Library for JavaScript</A>
-<UL>
+  HREF="node206.html">Google + API for Ruby</A>
 <LI><A NAME="tex2html1195"
-  HREF="node207.html#SECTION07481000000000000000">Getting access keys for your application</A>
-</UL>
+  HREF="node207.html">Google+ Sign-In for server-side apps</A>
 <LI><A NAME="tex2html1196"
-  HREF="node208.html">Auth Hash Schema</A>
+  HREF="node208.html">Authentication using the Google APIs Client Library for JavaScript</A>
 <LI><A NAME="tex2html1197"
-  HREF="node209.html">Class: OmniAuth::AuthHash::InfoHash</A>
+  HREF="node209.html">Getting access keys for your application</A>
 </UL>
 </UL>
 <BR>
