--- a/node183.html
+++ b/node183.html
@@ -172,27 +172,25 @@ PARTE: HERRAMIENTAS</A>
 <LI><A NAME="tex2html5763"
   HREF="node202.html">Using OAuth 2.0 to Access Google APIs</A>
 <LI><A NAME="tex2html5764"
-  HREF="node203.html">Sign-in with Google</A>
+  HREF="node203.html">OmniAuth gem: Standardized Multi-Provider Authentication for Ruby</A>
+<UL>
 <LI><A NAME="tex2html5765"
-  HREF="node204.html">OmniAuth gem: Standardized Multi-Provider Authentication for Ruby</A>
+  HREF="node203.html#SECTION07441000000000000000">Auth Hash Schema</A>
 <LI><A NAME="tex2html5766"
-  HREF="node205.html">OmniAuth OAuth2 gem</A>
-<UL>
+  HREF="node203.html#SECTION07442000000000000000">Class: OmniAuth::AuthHash::InfoHash</A>
+</UL>
 <LI><A NAME="tex2html5767"
-  HREF="node205.html#SECTION07461000000000000000">Google + API for Ruby</A>
-</UL>
+  HREF="node204.html">OmniAuth OAuth2 gem</A>
 <LI><A NAME="tex2html5768"
-  HREF="node206.html">Google+ Sign-In for server-side apps</A>
+  HREF="node205.html">Sign-in with Google +</A>
 <LI><A NAME="tex2html5769"
-  HREF="node207.html">Authentication using the Google APIs Client Library for JavaScript</A>
-<UL>
+  HREF="node206.html">Google + API for Ruby</A>
 <LI><A NAME="tex2html5770"
-  HREF="node207.html#SECTION07481000000000000000">Getting access keys for your application</A>
-</UL>
+  HREF="node207.html">Google+ Sign-In for server-side apps</A>
 <LI><A NAME="tex2html5771"
-  HREF="node208.html">Auth Hash Schema</A>
+  HREF="node208.html">Authentication using the Google APIs Client Library for JavaScript</A>
 <LI><A NAME="tex2html5772"
-  HREF="node209.html">Class: OmniAuth::AuthHash::InfoHash</A>
+  HREF="node209.html">Getting access keys for your application</A>
 </UL></UL>
 <!--End of Table of Child-Links-->
 
