--- a/node203.html
+++ b/node203.html
@@ -7,8 +7,8 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   Jens Lippmann, Marek Rouchal, Martin Wilck and others -->
 <HTML>
 <HEAD>
-<TITLE>Sign-in with Google</TITLE>
-<META NAME="description" CONTENT="Sign-in with Google">
+<TITLE>OmniAuth gem: Standardized Multi-Provider Authentication for Ruby</TITLE>
+<META NAME="description" CONTENT="OmniAuth gem: Standardized Multi-Provider Authentication for Ruby">
 <META NAME="keywords" CONTENT="javascriptexamples">
 <META NAME="resource-type" CONTENT="document">
 <META NAME="distribution" CONTENT="global">
@@ -93,7 +93,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  ALT="crguezl at github"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html6206"
-  HREF="node204.html">OmniAuth gem: Standardized Multi-Provider</A>
+  HREF="node204.html">OmniAuth OAuth2 gem</A>
 <B>Sup:</B> <A NAME="tex2html6200"
   HREF="node199.html">Google Oauth</A>
 <B> Ant:</B> <A NAME="tex2html6194"
@@ -109,27 +109,201 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BR> <P>
 </DIV>
 <!--End of Navigation Panel-->
+<!--Table of Child-Links-->
+<A NAME="CHILD_LINKS"><STRONG>Subsecciones</STRONG></A>
+
+<UL CLASS="ChildLinks">
+<LI><UL>
+<LI><UL>
+<LI><A NAME="tex2html6207"
+  HREF="node203.html#SECTION07440010000000000000">Getting Started</A>
+</UL>
+</UL>
+<BR>
+<LI><A NAME="tex2html6208"
+  HREF="node203.html#SECTION07441000000000000000">Auth Hash Schema</A>
+<LI><A NAME="tex2html6209"
+  HREF="node203.html#SECTION07442000000000000000">Class: OmniAuth::AuthHash::InfoHash</A>
+<UL>
+<LI><A NAME="tex2html6210"
+  HREF="node203.html#SECTION07442010000000000000">Schema (1.0 and Later)</A>
+</UL></UL>
+<!--End of Table of Child-Links-->
+<HR>
 
 <H1><A NAME="SECTION07440000000000000000">
-Sign-in with Google</A>
-</H1> 
-Google+ Sign-in provides the  <A NAME="tex2html801"
-  HREF="http://oauth.net/">OAuth</A>
- 2.0 authentication mechanism along
-with additional access to Google desktop and mobile features.
+OmniAuth gem: Standardized Multi-Provider Authentication for Ruby</A>
+</H1>
+
+<P>
 
 <UL>
-<LI><A NAME="tex2html802"
-  HREF="https://developers.google.com/+/">https://developers.google.com/+/</A>
-provides the  <A NAME="tex2html803"
-  HREF="http://oauth.net/">OAuth</A>
- 2.0 authentication mechanism along with additional access to Google desktop and mobile features.
-</LI>
-<LI>Direct access to an authentication service based on the standardized OpenID Connect mechanism is also available.
-<A NAME="tex2html804"
-  HREF="https://developers.google.com/accounts/docs/OAuth2Login">https://developers.google.com/accounts/docs/OAuth2Login</A>
+<LI><A NAME="tex2html801"
+  HREF="http://intridea.github.io/omniauth/">OmniAuth</A>
 </LI>
 </UL>
+
+<P>
+OmniAuth is a library that standardizes multi-provider authentication
+for web applications. Any developer can create <A NAME="22457"></A><SPAN  CLASS="textbf">strategies</SPAN> for
+OmniAuth that can
+authenticate users via disparate systems. 
+
+<P>
+OmniAuth strategies have been created for everything from Facebook to LDAP.
+
+<P>
+
+<H4><A NAME="SECTION07440010000000000000">
+Getting Started</A>
+</H4>
+  
+
+<P>
+To use OmniAuth in a project with a Gemfile, just add each of the
+strategies you want to use individually:
+
+<P>
+<PRE>
+gem 'omniauth-github'
+gem 'omniauth-openid'
+</PRE>
+
+<P>
+Now you can use the <code>OmniAuth::Builder</code> 
+Rack middleware to build up your
+list of OmniAuth strategies for use in your application:
+
+<P>
+<PRE>
+use OmniAuth::Builder do
+  provider:github, ENV['GITHUB_KEY'], ENV['GITHUB_SECRET']
+  provider:openid, :store =&gt; OpenID::Store::Filesystem.new('/tmp')
+end
+</PRE>
+By default, OmniAuth will return auth information to the path
+<code>/auth/:provider/callback</code> inside the Rack environment. 
+
+<P>
+In Sinatra, for
+example, a callback might look something like this:
+
+<P>
+<PRE>
+# Support both GET and POST for callbacks
+%w(get post).each do |method|
+  send(method, "/auth/:provider/callback") do
+    env['omniauth.auth'] # =&gt; OmniAuth::AuthHash
+  end
+end
+</PRE>
+
+<P>
+
+<H2><A NAME="SECTION07441000000000000000">
+Auth Hash Schema</A>
+</H2>
+
+<P>
+<A NAME="tex2html802"
+  HREF="https://github.com/intridea/omniauth/wiki/Auth-Hash-Schema">OmniAuth is a flexible authentication system utilizing Rack middleware.</A>
+<P>
+OmniAuth will always return a hash of information after authenticating
+with an external provider in the Rack environment under the key
+<code>omniauth.auth</code>. 
+
+<P>
+This information is meant to be as normalized as
+possible, so the schema below will be filled to the greatest degree available given the provider upon authentication. Fields marked required will always be present. Note that this guide may also be
+useful to developers implementing custom strategies to know how to provide results.
+
+<P>
+
+<H2><A NAME="SECTION07442000000000000000">
+Class: OmniAuth::AuthHash::InfoHash</A>
+</H2>
+Esta clase contiene información sobre el usuario.
+
+<P>
+<A NAME="tex2html803"
+  HREF="http://rubydoc.info/github/intridea/omniauth/master/OmniAuth/AuthHash/InfoHash">Class: OmniAuth::AuthHash::InfoHash</A>
+<P>
+<PRE>
+@auth info = 
+#&lt;OmniAuth::AuthHash::InfoHash
+  email="fulano.apellido1.apellido2@gmail.com" 
+  first_name="Fulano"
+  image="https://lh111.googleusercontent.com/-zYiezVYENBo/BBBBBBBBBBI/BBBBBBBBbFs/jKVZrfPCT8c/photo.jpg"
+  last_name="Apellido1-Apellido2" name="Fulano Apellido1-Apellido2" 
+  urls=#&lt;OmniAuth::AuthHash Google="https://plus.google.com/+FulanoApellido1Apellido2"&gt;
+&gt;
+</PRE>
+
+<P>
+
+<H4><A NAME="SECTION07442010000000000000">
+Schema (1.0 and Later)</A>
+</H4>
+  
+
+<OL>
+<LI><code>provider</code> (required) - The provider with which the user
+authenticated (e.g. 'twitter' or 'facebook')
+</LI>
+<LI><code>uid</code> (required) - An identifier unique to the given provider, such as a Twitter user ID. Should be stored as a string.
+</LI>
+<LI><code>info</code> (required) - A hash containing information about the user
+  
+<OL>
+<LI><code>name</code> (required) - The best display name known to the
+    strategy. Usually a concatenation of first and last name, but may also
+    be an arbitrary designator or nickname for some strategies
+</LI>
+<LI><code>email</code> - The e-mail of the authenticating user. Should
+    be provided if at all possible (but some sites such as Twitter do not
+    provide this information)
+</LI>
+<LI><code>nickname</code> - The username of an authenticating user (such
+    as your <code>@-name</code> from Twitter or GitHub account name)
+</LI>
+<LI><code>first_name</code>
+</LI>
+<LI><code>last_name</code>
+</LI>
+<LI><code>location</code> - The general location of the user, usually a
+    city and state.
+</LI>
+<LI><code>description</code> - A short description of the authenticating
+    user.
+</LI>
+<LI><code>image</code> - A URL representing a profile image of the
+    authenticating user. Where possible, should be specified to a square,
+    roughly 50x50 pixel image.
+    phone - The telephone number of the authenticating user (no formatting is enforced).
+    urls - A hash containing key value pairs of an identifier for the website and its URL. For instance, an entry could be "Blog" =&gt; "http://intridea.com/blog"
+  
+</LI>
+</OL>
+</LI>
+<LI><code>credentials</code> - If the authenticating service provides some kind of
+access token or other credentials upon authentication, these are passed
+through here.
+</LI>
+<LI><code>token</code> - Supplied by  <A NAME="tex2html804"
+  HREF="http://oauth.net/">OAuth</A>
+ and  <A NAME="tex2html805"
+  HREF="http://oauth.net/">OAuth</A>
+ 2.0 providers, the access token.
+</LI>
+<LI><code>secret</code> - Supplied by  <A NAME="tex2html806"
+  HREF="http://oauth.net/">OAuth</A>
+ providers, the access token secret.
+</LI>
+<LI><code>extra</code> - Contains extra information returned from the authentication provider. May be in provider-specific formats.
+</LI>
+<LI><code>raw_info</code> - A hash of all information gathered about a user in the format it was gathered. For example, for Twitter users this is a hash representing the JSON hash returned from the Twitter API.
+</LI>
+</OL>
 
 <P>
 
@@ -199,7 +373,7 @@ provides the  <A NAME="tex2html803"
  ALT="crguezl at github"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html6206"
-  HREF="node204.html">OmniAuth gem: Standardized Multi-Provider</A>
+  HREF="node204.html">OmniAuth OAuth2 gem</A>
 <B>Sup:</B> <A NAME="tex2html6200"
   HREF="node199.html">Google Oauth</A>
 <B> Ant:</B> <A NAME="tex2html6194"
