--- a/node206.html
+++ b/node206.html
@@ -7,8 +7,8 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   Jens Lippmann, Marek Rouchal, Martin Wilck and others -->
 <HTML>
 <HEAD>
-<TITLE>Google+ Sign-In for server-side apps</TITLE>
-<META NAME="description" CONTENT="Google+ Sign-In for server-side apps">
+<TITLE>Google + API for Ruby</TITLE>
+<META NAME="description" CONTENT="Google + API for Ruby">
 <META NAME="keywords" CONTENT="javascriptexamples">
 <META NAME="resource-type" CONTENT="document">
 <META NAME="distribution" CONTENT="global">
@@ -93,11 +93,11 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  ALT="crguezl at github"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html6252"
-  HREF="node207.html">Authentication using the Google</A>
+  HREF="node207.html">Google+ Sign-In for server-side</A>
 <B>Sup:</B> <A NAME="tex2html6246"
   HREF="node199.html">Google Oauth</A>
 <B> Ant:</B> <A NAME="tex2html6240"
-  HREF="node205.html">OmniAuth OAuth2 gem</A>
+  HREF="node205.html">Sign-in with Google +</A>
 <B> Con:</B> 
 <A NAME="tex2html6247"
   HREF="node215.html">
@@ -109,37 +109,132 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BR> <P>
 </DIV>
 <!--End of Navigation Panel-->
+<!--Table of Child-Links-->
+<A NAME="CHILD_LINKS"><STRONG>Subsecciones</STRONG></A>
+
+<UL CLASS="ChildLinks">
+<LI><UL>
+<LI><UL>
+<LI><A NAME="tex2html6253"
+  HREF="node206.html#SECTION07470010000000000000">Donde</A>
+<LI><A NAME="tex2html6254"
+  HREF="node206.html#SECTION07470020000000000000">Step 1: Enable the Google+ API</A>
+</UL></UL></UL>
+<!--End of Table of Child-Links-->
+<HR>
 
 <H1><A NAME="SECTION07470000000000000000">
-Google+ Sign-In for server-side apps</A>
+Google + API for Ruby</A>
 </H1>
 
 <P>
-To take advantage of all of the benefits of Google+ Sign-In you must
-use a hybrid server-side flow where a user authorizes your app on the
-client side using the JavaScript API client and you send a
-special one-time authorization code to your server. 
 
-<P>
-Your server exchanges this one-time-use code to acquire its own access and
-refresh tokens from Google for the server to be able to make its own API
-calls, which can be done while the user is offline. 
-
-<P>
-This one-time code flow has security advantages over both a pure
-server-side flow and over sending access tokens to your server.
+<H4><A NAME="SECTION07470010000000000000">
+Donde</A>
+</H4>
+  
 
 <P>
 
-<FONT COLOR="#ff0000"> The Google+ Sign-In server-side flow differs from the  <A NAME="tex2html814"
+<UL>
+<LI><A NAME="tex2html812"
+  HREF="https://github.com/crguezl/gplus-quickstart-ruby">https://github.com/crguezl/gplus-quickstart-ruby</A>
+</LI>
+<LI><PRE>
+[~/sinatra/gplus-quickstart-ruby(master)]$ pwd -P
+/Users/casiano/local/src/ruby/sinatra/gplus-quickstart-ruby
+[~/sinatra/gplus-quickstart-ruby(master)]$ git remote -v
+googleplus      git@github.com:googleplus/gplus-quickstart-ruby.git (fetch)
+googleplus      git@github.com:googleplus/gplus-quickstart-ruby.git (push)
+origin  git@github.com:crguezl/gplus-quickstart-ruby.git (fetch)
+origin  git@github.com:crguezl/gplus-quickstart-ruby.git (push)
+</PRE>
+</LI>
+<LI><A NAME="tex2html813"
+  HREF="https://github.com/crguezl/gplus-quickstart-ruby">https://github.com/crguezl/gplus-quickstart-ruby</A>
+</LI>
+<LI><A NAME="tex2html814"
+  HREF="https://developers.google.com/+/quickstart/ruby">https://developers.google.com/+/quickstart/ruby</A>
+</LI>
+</UL>
+
+<P>
+The app demonstrates:
+
+<P>
+
+<UL>
+<LI>Using the Google+ Sign-In button to get an  <A NAME="tex2html815"
   HREF="http://oauth.net/">OAuth</A>
- 2.0
-for Web server applications flow.</FONT>
+ 2.0 refresh token.
+</LI>
+<LI>Exchanging the refresh token for an access token.
+</LI>
+<LI>Making Google+ API requests with the access token, including getting a list of people that the user has circled.
+</LI>
+<LI>Disconnecting the app from the user's Google account and revoking tokens.
+</LI>
+</UL>
 
 <P>
 
-<img src="server_side_code_flow.png" />
+<H4><A NAME="SECTION07470020000000000000">
+Step 1: Enable the Google+ API</A>
+</H4>
+  
 
+<P>
+Create a Google APIs Console project,  <A NAME="tex2html816"
+  HREF="http://oauth.net/">OAuth</A>
+ 2.0 client ID, and register your JavaScript origins:
+
+<P>
+To register a new application, do the following:
+
+<P>
+
+<UL>
+<LI>Go to the Google Cloud Console.
+</LI>
+<LI>Select a project, or create a new one.
+</LI>
+<LI>In the sidebar on the left, select <code>APIs &amp; auth</code>. 
+In the displayed list of APIs, make sure the <code>Google+ API</code> status is set to <code>ON</code>.
+</LI>
+<LI>In the sidebar on the left, select <code>Registered apps</code>.
+</LI>
+<LI>At the top of the page, select Register App.
+</LI>
+<LI>Fill out the form and select Register.
+</LI>
+</UL>
+
+<FONT COLOR="#ff0000"> Register the origins where your app is allowed to access the Google APIs</FONT>. 
+The origin is the unique combination of protocol, hostname, and
+port. You can enter multiple origins to allow for your app to run on
+different protocols, domains or subdomains. Wildcards are not allowed.
+
+<P>
+
+<UL>
+<LI>Expand the  <A NAME="tex2html817"
+  HREF="http://oauth.net/">OAuth</A>
+ 2.0 Client ID section.
+</LI>
+<LI>In the Web origin field, enter your origin:
+<PRE>
+http://localhost:4567
+</PRE>
+</LI>
+<LI>Press ENTER to save your origin. You can then click the + symbol to add additional origins.
+</LI>
+<LI>Note or copy the client ID and client secret that your app will need to use to access the APIs.
+</LI>
+</UL>
+
+<P>
+<A NAME="tex2html818"
+  HREF="https://developers.google.com/api-client-library/ruby/guide/aaa_client_secrets">Client Secrets</A>
 <P>
 
 <DIV CLASS="navigation"><HR>
@@ -208,11 +303,11 @@ for Web server applications flow.</FONT>
  ALT="crguezl at github"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html6252"
-  HREF="node207.html">Authentication using the Google</A>
+  HREF="node207.html">Google+ Sign-In for server-side</A>
 <B>Sup:</B> <A NAME="tex2html6246"
   HREF="node199.html">Google Oauth</A>
 <B> Ant:</B> <A NAME="tex2html6240"
-  HREF="node205.html">OmniAuth OAuth2 gem</A>
+  HREF="node205.html">Sign-in with Google +</A>
 </DIV>
 <!--End of Navigation Panel-->
 <ADDRESS>
