--- a/node208.html
+++ b/node208.html
@@ -7,8 +7,8 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   Jens Lippmann, Marek Rouchal, Martin Wilck and others -->
 <HTML>
 <HEAD>
-<TITLE>Auth Hash Schema</TITLE>
-<META NAME="description" CONTENT="Auth Hash Schema">
+<TITLE>Authentication using the Google APIs Client Library for JavaScript</TITLE>
+<META NAME="description" CONTENT="Authentication using the Google APIs Client Library for JavaScript">
 <META NAME="keywords" CONTENT="javascriptexamples">
 <META NAME="resource-type" CONTENT="document">
 <META NAME="distribution" CONTENT="global">
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html6280"
+<A NAME="tex2html6281"
   HREF="node209.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html6274"
+<A NAME="tex2html6275"
   HREF="node199.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html6268"
+<A NAME="tex2html6269"
   HREF="node207.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html6276"
+<A NAME="tex2html6277"
   HREF="node215.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html6278"
+<A NAME="tex2html6279"
   HREF="node218.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -92,18 +92,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html6281"
-  HREF="node209.html">Class: OmniAuth::AuthHash::InfoHash</A>
-<B>Sup:</B> <A NAME="tex2html6275"
+<B> Sig:</B> <A NAME="tex2html6282"
+  HREF="node209.html">Getting access keys for</A>
+<B>Sup:</B> <A NAME="tex2html6276"
   HREF="node199.html">Google Oauth</A>
-<B> Ant:</B> <A NAME="tex2html6269"
-  HREF="node207.html">Authentication using the Google</A>
+<B> Ant:</B> <A NAME="tex2html6270"
+  HREF="node207.html">Google+ Sign-In for server-side</A>
 <B> Con:</B> 
-<A NAME="tex2html6276"
+<A NAME="tex2html6277"
   HREF="node215.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html6278"
+<A NAME="tex2html6279"
   HREF="node218.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -111,38 +111,29 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <!--End of Navigation Panel-->
 
 <H1><A NAME="SECTION07490000000000000000">
-Auth Hash Schema</A>
+Authentication using the Google APIs Client Library for JavaScript</A>
 </H1>
 
 <P>
-<A NAME="tex2html818"
-  HREF="https://github.com/intridea/omniauth/wiki/Auth-Hash-Schema">OmniAuth is a flexible authentication system utilizing Rack middleware.</A>
-<P>
-OmniAuth will always return a hash of information after authenticating
-with an external provider in the Rack environment under the key
-<code>omniauth.auth</code>. 
-
-<P>
-This information is meant to be as normalized as
-possible, so the schema below will be filled to the greatest degree available given the provider upon authentication. Fields marked required will always be present. Note that this guide may also be
-useful to developers implementing custom strategies to know how to provide results.
+<A NAME="tex2html820"
+  HREF="https://developers.google.com/api-client-library/javascript/features/authentication">See</A>.
 
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html6280"
+<A NAME="tex2html6281"
   HREF="node209.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html6274"
+<A NAME="tex2html6275"
   HREF="node199.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html6268"
+<A NAME="tex2html6269"
   HREF="node207.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html6276"
+<A NAME="tex2html6277"
   HREF="node215.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html6278"
+<A NAME="tex2html6279"
   HREF="node218.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -194,12 +185,12 @@ useful to developers implementing custom strategies to know how to provide resul
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html6281"
-  HREF="node209.html">Class: OmniAuth::AuthHash::InfoHash</A>
-<B>Sup:</B> <A NAME="tex2html6275"
+<B> Sig:</B> <A NAME="tex2html6282"
+  HREF="node209.html">Getting access keys for</A>
+<B>Sup:</B> <A NAME="tex2html6276"
   HREF="node199.html">Google Oauth</A>
-<B> Ant:</B> <A NAME="tex2html6269"
-  HREF="node207.html">Authentication using the Google</A>
+<B> Ant:</B> <A NAME="tex2html6270"
+  HREF="node207.html">Google+ Sign-In for server-side</A>
 </DIV>
 <!--End of Navigation Panel-->
 <ADDRESS>
