--- a/node203.html
+++ b/node203.html
@@ -145,7 +145,7 @@ OmniAuth gem: Standardized Multi-Provider Authentication for Ruby</A>
 
 <P>
 OmniAuth is a library that standardizes multi-provider authentication
-for web applications. Any developer can create <A NAME="22458"></A><SPAN  CLASS="textbf">strategies</SPAN> for
+for web applications. Any developer can create <A NAME="22460"></A><SPAN  CLASS="textbf">strategies</SPAN> for
 OmniAuth that can
 authenticate users via disparate systems. 
 
@@ -161,7 +161,8 @@ Getting Started</A>
 
 <P>
 To use OmniAuth in a project with a Gemfile, just add each of the
-strategies you want to use individually:
+
+<FONT COLOR="#0000ff"> strategies</FONT> you want to use individually:
 
 <P>
 <PRE>
@@ -171,8 +172,9 @@ gem 'omniauth-openid'
 
 <P>
 Now you can use the <code>OmniAuth::Builder</code> 
-Rack middleware to build up your
-list of OmniAuth strategies for use in your application:
+Rack middleware 
+<FONT COLOR="#0000ff"> to build up your
+list of OmniAuth strategies for use in your application</FONT>:
 
 <P>
 <PRE>
