--- a/node95.html
+++ b/node95.html
@@ -110,8 +110,10 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 </DIV>
 <!--End of Navigation Panel-->
 
-<H1><A NAME="SECTION06100000000000000000">
-Rack, un Webserver Ruby Modular</A>
+<H1><A NAME="SECTION06100000000000000000"></A>
+<A NAME="chapter:rack"></A>
+<BR>
+Rack, un Webserver Ruby Modular
 </H1>
 <BR> <HR>
 <!--Table of Child-Links-->
