--- a/node113.html
+++ b/node113.html
@@ -129,8 +129,10 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <!--End of Table of Child-Links-->
 <HR>
 
-<H1><A NAME="SECTION061180000000000000000">
-Middleware y la Clase Rack::Builder</A>
+<H1><A NAME="SECTION061180000000000000000"></A>
+<A NAME="section:middleware"></A>
+<BR>
+Middleware y la Clase Rack::Builder
 </H1>
 
 <P>
