--- a/node202.html
+++ b/node202.html
@@ -145,7 +145,7 @@ OmniAuth gem: Standardized Multi-Provider Authentication for Ruby</A>
 
 <P>
 OmniAuth is a library that standardizes multi-provider authentication
-for web applications. Any developer can create <A NAME="22446"></A><SPAN  CLASS="textbf">strategies</SPAN> for
+for web applications. Any developer can create <A NAME="22451"></A><SPAN  CLASS="textbf">strategies</SPAN> for
 OmniAuth that can
 authenticate users via disparate systems. 
 
@@ -175,6 +175,13 @@ Now you can use the <code>OmniAuth::Builder</code>
 Rack middleware 
 <FONT COLOR="#0000ff"> to build up your
 list of OmniAuth strategies for use in your application</FONT>:
+
+<P>
+Véanse las secciones Rack en <A HREF="node95.html#chapter:rack">15</A>
+y
+<I>Middleware y la Clase Rack::Builder</I>
+en
+<A HREF="node113.html#section:middleware">15.18</A> para saber mas sobre Rack y sobre Middlewares Rack.
 
 <P>
 <PRE>
